fix headers, section ui on tablet view

--- a/css/global.sass
+++ b/css/global.sass
@@ -43,7 +43,6 @@ body
                     color: $cWhite
                     font-size: 1rem
 
-        
 // HAMBURGER MENU
 .hamburger-menu 
     display: none
@@ -65,6 +64,7 @@ body
 // NAVBAR ACTIVE
 .navbar-active
     background: $cWhite
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05)
     transition: all 0.3s ease
 
     .nav-logo-active
