--- a/css/queries.sass
+++ b/css/queries.sass
@@ -5,3 +5,27 @@
         
         .hamburger-menu 
             display: flex !important
+
+
+    .section-1
+        .d-grid
+            grid-template-columns: 1fr !important
+            grid-row-gap: 30px
+
+    .section-3
+        .d-flex 
+            flex-direction: column
+
+            .contactUs-text
+                width: 100%
+                margin-bottom: 2.5rem
+
+            .contact-form-container
+                width: 100% !important
+
+    .footer
+        .d-flex 
+            flex-direction: column
+
+        .column-1, .column-2
+            margin-bottom: 2.5rem
